[gd_scene load_steps=13 format=3 uid="uid://coojmigwdmcre"]

[ext_resource type="Script" uid="uid://iowyakf7d102" path="res://world.gd" id="1_dwbse"]
[ext_resource type="PackedScene" uid="uid://bchwhn1hdbhei" path="res://Player.tscn" id="1_qjjg4"]
[ext_resource type="PackedScene" uid="uid://bmfpk8pa6tscf" path="res://map.tscn" id="2_kphxh"]
[ext_resource type="PackedScene" uid="uid://canfq7r4f41yl" path="res://ammo_pick_up.tscn" id="3_tlwt5"]
[ext_resource type="Script" uid="uid://bbglrkm5l5v4b" path="res://start_button.gd" id="5_pkg7o"]
[ext_resource type="NavigationMesh" path="NavigationRegion3D/MapArena" id="5_wse8f"]
[ext_resource type="Script" uid="uid://5emx1h5umgq4" path="res://quit_button.gd" id="6_gbfbk"]
[ext_resource type="PackedScene" uid="uid://dmx6wqhxd3av5" path="res://enemy.tscn" id="6_ioo17"]
[ext_resource type="Script" uid="uid://lf13qw3k3dsi" path="res://resume.gd" id="7_pkg7o"]
[ext_resource type="PackedScene" uid="uid://b6rx7vgl1kjb2" path="res://ammo_count.tscn" id="8_gbfbk"]

[sub_resource type="Environment" id="Environment_i6glg"]
ambient_light_color = Color(0.272676, 0.153813, 0.499212, 1)
ambient_light_energy = 1.51

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_jblg0"]

[node name="World" type="Node3D"]
script = ExtResource("1_dwbse")

[node name="AmmoCount" parent="." instance=ExtResource("8_gbfbk")]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.150295, 0.988641, 0, -0.988641, -0.150295, 0, 18.4541, 0)
light_energy = 2.616
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_i6glg")
camera_attributes = SubResource("CameraAttributesPractical_jblg0")

[node name="Player" parent="." instance=ExtResource("1_qjjg4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.5394, 0.0780766, 2.20534)

[node name="Enemy" parent="." instance=ExtResource("6_ioo17")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.7306, 0, -8.17382)

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navigation_mesh = ExtResource("5_wse8f")

[node name="MapArena" parent="NavigationRegion3D" instance=ExtResource("2_kphxh")]

[node name="AmmoPickUp" parent="." instance=ExtResource("3_tlwt5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0.179279, -3)

[node name="AmmoPickUp5" parent="." instance=ExtResource("3_tlwt5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.36999, 0.179279, -3)

[node name="AmmoPickUp8" parent="." instance=ExtResource("3_tlwt5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.15893, 0.179279, -3)

[node name="AmmoPickUp9" parent="." instance=ExtResource("3_tlwt5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.8849, 0.179279, -3)

[node name="AmmoPickUp6" parent="." instance=ExtResource("3_tlwt5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.32025, 0.179279, -3)

[node name="AmmoPickUp7" parent="." instance=ExtResource("3_tlwt5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.194486, 0.179279, -3)

[node name="AmmoPickUp2" parent="." instance=ExtResource("3_tlwt5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17.6629, 0.179279, -3)

[node name="AmmoPickUp3" parent="." instance=ExtResource("3_tlwt5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -26.2754, 0.179279, -3)

[node name="AmmoPickUp4" parent="." instance=ExtResource("3_tlwt5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -36.847, 0.179279, -3)

[node name="Menu" type="CanvasLayer" parent="."]

[node name="MainMenu" type="PanelContainer" parent="Menu"]
process_mode = 3
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 398.0
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Menu/MainMenu"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MainMenu/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
size_flags_stretch_ratio = 4.66
alignment = 1

[node name="Label" type="Label" parent="Menu/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Start" type="Button" parent="Menu/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Start"
script = ExtResource("5_pkg7o")

[node name="Quit" type="Button" parent="Menu/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit
"
script = ExtResource("6_gbfbk")

[node name="PauseMenu" type="PanelContainer" parent="Menu"]
process_mode = 2
visible = false
offset_left = 398.0
offset_right = 776.0
offset_bottom = 648.0

[node name="MarginContainer" type="MarginContainer" parent="Menu/PauseMenu"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/PauseMenu/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Menu/PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Pause
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Resume" type="Button" parent="Menu/PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume Game
"
script = ExtResource("7_pkg7o")

[node name="Quit" type="Button" parent="Menu/PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit Game"
script = ExtResource("6_gbfbk")

[connection signal="pressed" from="Menu/MainMenu/MarginContainer/VBoxContainer/Start" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Menu/PauseMenu/MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
